--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="temperature__content">
             <div class="temperature__controls">
                 <span id="increaseTempControl">⬆️</span>
-                <span id="tempValue"></span>
+                <span id="tempValue"> </span>
                 <span id="decreaseTempControl">⬇️</span>
             </div>
             <button id="currentTempButton">Get Realtime Temperature</button>
@@ -46,7 +46,7 @@
             <div id="landscape"></div>
         </div>
     </section>
-    <script src="./node_modules/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./src/index.js"></script>
 </body>
 </html>
