--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     <section class="sky__section">
         <h2>Sky</h2>
         <select id="skySelect">
-            <!-- sky options here -->
+            <option value="">--Option--</option>
+                <option value="sunny">Sunny</option>
+                <option value="cloudy">Cloudy</option>
+                <option value="rainy">Rainy</option>
+                <option value="sunny">Sunny</option>
         </select>
     </section>
 
