added button to change temp to Celsius

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="temperature__controls">
                 <span id="increaseTempControl">⬆️</span>
                 <span id="tempValue"> </span>
+                <button id="tempToCelsius"> F </button>
                 <span id="decreaseTempControl">⬇️</span>
             </div>
             <button id="currentTempButton">Get Realtime Temperature</button>
